package cn.org.wyxxt.factorymethod;

/**
 * @author xingzhiwei
 * @createBy IntelliJ IDEA
 * @time 2021/2/24 11:58 上午
 * @email jsjxzw@163.com
 */
public class Car implements Movable {

    public void go() {
        System.out.println("Car go wuwuwu...");
    }
}
