package cn.org.wyxxt.factorymethod;

/**
 * @author xingzhiwei
 * @createBy IntelliJ IDEA
 * @time 2021/2/24 1:48 下午
 * @email jsjxzw@163.com
 */
public interface Movable {
    void go();
}
