package cn.org.wyxxt.factorymethod;

/**
 * @author xingzhiwei
 * @createBy IntelliJ IDEA
 * @time 2021/2/24 1:47 下午
 * @email jsjxzw@163.com
 */
public class Plane implements Movable {

    public void go() {
        System.out.println("Plane suasuasua...");
    }
}
